KubernetesDeploy/WorketJob.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitmirrorer
