KubernetesDeploy/Deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitmirrorer-api
  namespace: gitmirrorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitmirrorer-api
  template:
    metadata:
      labels:
        app: gitmirrorer-api
    spec:
      containers:
      - name: gitmirrorer-api
        image: ghcr.io/bigpod98/pajdisekgitmirrorer/pajdisekgitmirrorer.api:latest
        ports:
        - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitmirrorer-webui
  namespace: gitmirrorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitmirrorer-webui
  template:
    metadata:
      labels:
        app: gitmirrorer-webui
    spec:
      containers:
      - name: gitmirrorer-webui
        image: ghcr.io/bigpod98/pajdisekgitmirrorer/pajdisekgitmirrorer.frontend:latest
        ports:
        - containerPort: 80
