KubernetesDeploy/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitmirrorer-ingress
  namespace: gitmirrorer
spec:
  ingressClassName: "nginx"
  rules:
  - host: "gitmirrorer.pajdisek.palocal"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitmirrorer-webui
            port:
              number: 443

  - host: "gitmirrorer.pajdisek.palocal"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: gitmirrorer-api
            port:
              number: 443
